# ATRI

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.prod.yml  install.bat  install.sh  main.py  pyproject.toml  执行准则.md
config/: asr_config.yaml  auth.yaml  llm_config.yaml  memory_config.yaml  storage_config.yaml  tts_config.yaml
docker/: frontend.Dockerfile  host-nginx.same-domain.conf
docs/: CosyVoice3_TTS使用说明.md  TTS配置说明.md  quickstart.md  角色创建指南.md  认证系统使用指南.md
docs/configs/: Docker部署指南.md  云端部署（非docker）指南.md  认证系统使用指南.md
docs/developments/: 会话上下文备份_20260418.md  总结_前端对话历史.md  项目架构设计.md
prompts/persona/: atri.md  bilibili.md
src/: app.py  main.py  service_context.py
src/agent/: chat_agent.py  persona.py
src/asr/: config.py
src/auth/: dependencies.py  service.py  session.py
src/llm/: __init__.py  factory.py  interface.py
src/memory/: chat_history.py  long_term.py  manager.py  retrieval_policy.py  search_cache.py
src/middleware/: auth.py
src/models/: character.py  live2d.py  tts.py
src/routes/: auth.py  characters.py  chat_ws.py  chats.py  data.py  live2d.py  tts.py
src/storage/: character_storage.py  db_storage.py  interface.py  json_storage.py  live2d_storage.py
src/tts/: __init__.py  config.py  exceptions.py  factory.py  interface.py  service.py
src/utils/: yaml_text.py
tests/: test_service_context.py
tests/agent/: test_chat_agent.py  test_live_chat_agent.py  test_persona_loader.py
tests/auth/: test_service.py
tests/llm/: test_factory.py  test_interface.py  (+1 more)
(+33 files in other folders)
