[project]
name = "atri"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "loguru>=0.7.3",
    "mem0ai>=2.0.0",
    "openai>=2.32.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
